[gd_scene load_steps=5 format=3 uid="uid://bnd30ew1s2oj2"]

[ext_resource type="Script" uid="uid://dgd3mw7y5xqye" path="res://menu/pausemenu.gd" id="1_cj5n6"]
[ext_resource type="PackedScene" uid="uid://l4l7pvi0o8f3" path="res://ui/input_settings/input_settings.tscn" id="2_ik68m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_plhd7"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ik68m"]
bg_color = Color(0, 0, 0, 0)

[node name="pausemenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cj5n6")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.54902)
metadata/_edit_lock_ = true

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.5
offset_top = -68.5
offset_right = 270.5
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 7

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resume Game" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume Game"

[node name="Restart Level" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Restart Level"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Settings Menu" type="Panel" parent="."]
visible = false
top_level = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -720.0
offset_top = -405.0
offset_right = 720.0
offset_bottom = 405.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Close Setting" type="Button" parent="Settings Menu"]
layout_mode = 0
offset_left = 1266.0
offset_top = 724.0
offset_right = 1404.0
offset_bottom = 802.0
theme_override_font_sizes/font_size = 50
text = "Close"

[node name="VBoxContainer" type="VBoxContainer" parent="Settings Menu"]
layout_mode = 0
offset_left = 257.0
offset_top = 15.0
offset_right = 540.0
offset_bottom = 310.0
theme_override_constants/separation = 77

[node name="HSlider" type="HSlider" parent="Settings Menu/VBoxContainer"]
layout_mode = 2
max_value = 200.0

[node name="sfx" type="HSlider" parent="Settings Menu/VBoxContainer"]
layout_mode = 2
max_value = 200.0

[node name="music" type="HSlider" parent="Settings Menu/VBoxContainer"]
layout_mode = 2
max_value = 200.0

[node name="screen_shake" type="HSlider" parent="Settings Menu/VBoxContainer"]
layout_mode = 2
max_value = 200.0

[node name="labels" type="VBoxContainer" parent="Settings Menu"]
layout_mode = 0
offset_right = 254.0
offset_bottom = 318.0
theme_override_constants/separation = 50
alignment = 1

[node name="Label" type="Label" parent="Settings Menu/labels"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Master"
horizontal_alignment = 1

[node name="sfx_label" type="Label" parent="Settings Menu/labels"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Sound Effects"
horizontal_alignment = 1

[node name="music_label" type="Label" parent="Settings Menu/labels"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Music"
horizontal_alignment = 1

[node name="screen_shake_label" type="Label" parent="Settings Menu/labels"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Screen Shake"
horizontal_alignment = 1

[node name="percentage" type="VBoxContainer" parent="Settings Menu"]
layout_mode = 0
offset_left = 564.0
offset_right = 641.0
offset_bottom = 318.0
theme_override_constants/separation = 50
alignment = 1

[node name="Label" type="Label" parent="Settings Menu/percentage"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "0%"
horizontal_alignment = 1

[node name="sfx_label" type="Label" parent="Settings Menu/percentage"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "0%"
horizontal_alignment = 1

[node name="music_label" type="Label" parent="Settings Menu/percentage"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "0%"
horizontal_alignment = 1

[node name="screen_shake_label" type="Label" parent="Settings Menu/percentage"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "0%"
horizontal_alignment = 1

[node name="keybinds_button" type="Button" parent="Settings Menu"]
layout_mode = 0
offset_left = 1137.0
offset_right = 1440.0
offset_bottom = 150.0
theme_override_font_sizes/font_size = 50
text = "Keybinds"

[node name="reset_buttons" type="Control" parent="Settings Menu"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="sound_effects" type="Button" parent="Settings Menu/reset_buttons"]
layout_mode = 0
offset_left = 579.0
offset_top = 131.0
offset_right = 628.0
offset_bottom = 160.0
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_plhd7")
text = "Reset"

[node name="music" type="Button" parent="Settings Menu/reset_buttons"]
layout_mode = 0
offset_left = 579.0
offset_top = 222.0
offset_right = 628.0
offset_bottom = 251.0
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_plhd7")
text = "Reset"

[node name="screen_shake" type="Button" parent="Settings Menu/reset_buttons"]
layout_mode = 0
offset_left = 579.0
offset_top = 313.0
offset_right = 628.0
offset_bottom = 342.0
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_plhd7")
text = "Reset"

[node name="other_video" type="VBoxContainer" parent="Settings Menu"]
layout_mode = 0
offset_top = 390.0
offset_right = 263.0
offset_bottom = 810.0
theme_override_constants/separation = 20

[node name="full_screen" type="Label" parent="Settings Menu/other_video"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Full Screen"

[node name="Button" type="Button" parent="Settings Menu/other_video/full_screen"]
layout_mode = 0
offset_left = 303.0
offset_top = 13.0
offset_right = 405.0
offset_bottom = 115.0
scale = Vector2(0.5, 0.5)

[node name="1" type="Line2D" parent="Settings Menu/other_video/full_screen/Button"]
points = PackedVector2Array(0, 0, 102, 0, 102, 102, 0, 102)
closed = true
begin_cap_mode = 2
end_cap_mode = 2
metadata/_edit_lock_ = true

[node name="2" type="Line2D" parent="Settings Menu/other_video/full_screen/Button"]
visible = false
points = PackedVector2Array(102, 102, 0, 0)
begin_cap_mode = 2
end_cap_mode = 2
metadata/_edit_lock_ = true

[node name="3" type="Line2D" parent="Settings Menu/other_video/full_screen/Button"]
visible = false
position = Vector2(102, 0)
rotation = 1.5708
points = PackedVector2Array(102, 102, 0, 0)
begin_cap_mode = 2
end_cap_mode = 2
metadata/_edit_lock_ = true

[node name="framerate" type="Label" parent="Settings Menu/other_video"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Max FPS"

[node name="OptionButton" type="OptionButton" parent="Settings Menu/other_video/framerate"]
layout_mode = 0
offset_left = 251.0
offset_top = 2.0
offset_right = 388.0
offset_bottom = 66.0
theme_override_font_sizes/font_size = 40
item_count = 6
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "60"
popup/item_1/id = 1
popup/item_2/text = "120"
popup/item_2/id = 2
popup/item_3/text = "144"
popup/item_3/id = 3
popup/item_4/text = "240"
popup/item_4/id = 4
popup/item_5/text = "288"
popup/item_5/id = 5

[node name="laser_aim" type="Label" parent="Settings Menu/other_video"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Laser Aim"

[node name="laser_aim_button" type="Button" parent="Settings Menu/other_video/laser_aim"]
layout_mode = 0
offset_left = 303.0
offset_top = 13.0
offset_right = 354.0
offset_bottom = 64.0

[node name="1" type="Line2D" parent="Settings Menu/other_video/laser_aim/laser_aim_button"]
points = PackedVector2Array(0, 0, 51, 0, 51, 51, 0, 51)
closed = true
width = 5.0
begin_cap_mode = 2
end_cap_mode = 2
metadata/_edit_lock_ = true

[node name="2" type="Line2D" parent="Settings Menu/other_video/laser_aim/laser_aim_button"]
visible = false
points = PackedVector2Array(51, 51, 0, 0)
width = 5.0
begin_cap_mode = 2
end_cap_mode = 2
metadata/_edit_lock_ = true

[node name="3" type="Line2D" parent="Settings Menu/other_video/laser_aim/laser_aim_button"]
visible = false
position = Vector2(51, 0)
rotation = 1.5708
points = PackedVector2Array(51, 51, 0, 0)
width = 5.0
begin_cap_mode = 2
end_cap_mode = 2
metadata/_edit_lock_ = true

[node name="InputSettings" parent="." instance=ExtResource("2_ik68m")]
visible = false
layout_mode = 1
offset_left = 10.0
offset_top = -44.0
offset_right = 10.0
offset_bottom = -44.0

[node name="close_keybinds_button" type="Button" parent="."]
visible = false
top_level = true
layout_mode = 0
offset_left = 1479.0
offset_top = 859.0
offset_right = 1672.0
offset_bottom = 937.0
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_ik68m")
text = "Close"

[connection signal="pressed" from="VBoxContainer/Resume Game" to="." method="_on_resume_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart Level" to="." method="_on_restart_level_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Settings Menu/Close Setting" to="." method="_on_close_setting_pressed"]
[connection signal="drag_ended" from="Settings Menu/VBoxContainer/HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="value_changed" from="Settings Menu/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="drag_ended" from="Settings Menu/VBoxContainer/sfx" to="." method="_on_sfx_drag_ended"]
[connection signal="value_changed" from="Settings Menu/VBoxContainer/sfx" to="." method="_on_sfx_value_changed"]
[connection signal="drag_ended" from="Settings Menu/VBoxContainer/music" to="." method="_on_music_drag_ended"]
[connection signal="value_changed" from="Settings Menu/VBoxContainer/music" to="." method="_on_music_value_changed"]
[connection signal="drag_ended" from="Settings Menu/VBoxContainer/screen_shake" to="." method="_on_screen_shake_drag_ended"]
[connection signal="value_changed" from="Settings Menu/VBoxContainer/screen_shake" to="." method="_on_screen_shake_value_changed"]
[connection signal="pressed" from="Settings Menu/keybinds_button" to="." method="_on_keybinds_button_pressed"]
[connection signal="pressed" from="Settings Menu/reset_buttons/sound_effects" to="." method="_on_sound_effects_pressed"]
[connection signal="pressed" from="Settings Menu/reset_buttons/music" to="." method="_on_music_pressed"]
[connection signal="pressed" from="Settings Menu/reset_buttons/screen_shake" to="." method="_on_screen_shake_pressed"]
[connection signal="pressed" from="Settings Menu/other_video/full_screen/Button" to="." method="_on_button_pressed"]
[connection signal="item_selected" from="Settings Menu/other_video/framerate/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="Settings Menu/other_video/laser_aim/laser_aim_button" to="." method="_on_laser_aim_button_pressed"]
[connection signal="pressed" from="close_keybinds_button" to="." method="_on_close_keybinds_button_pressed"]
